<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/filterItem"
        android:title="@string/item_3"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/roomFilterSubItem"
                android:title="@string/select_place" />

<!--            <item-->
<!--                android:id="@+id/timeFilterSubItem"-->
<!--                android:title="@string/select_time" />-->

            <item
                android:id="@+id/dateFilterSubItem"
                android:title="@string/date" />

            <item
                android:id="@+id/listSubItem"
                android:title="@string/afficher_la_liste" />

        </menu>

    </item>
</menu>